[tool.poetry]
name = "cipher_asa2249"
version = "0.1.0"
description = "A package for eencrypting and decrypting text using the cipher algorithm."
authors = ["Armaan Ahmed"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
